# pp_hw_01

./: .gitignore  .gitlab-ci.yml  .pylintrc  README.md  pyproject.toml  pytest.ini
.github/workflows/: pylint.yml  pytest.yml
deco/: deco.py  deco_try.py
homework_01/: deco.py  deco_try.py
log_analyzer/: .gitlab-ci.yml  __init__.py  logging.yaml  main.py
log_analyzer/src/: __init__.py  log_find.py  log_parser.py  log_report.py
log_analyzer/src/helpers/: __init__.py  argparse.py  log_cfg.py  log_last_log.py  log_last_report.py  log_path.py  log_report_name.py  log_report_template.py
log_analyzer/src/logging/: __init__.py  custom_logging.py  custom_rotating_file_handler.py  unhandled_exception.py
log_analyzer/src/schemas/: __init__.py  as_dict_redefined.py  cfg_data.py  log_parser_data.py  log_report_data.py  url_data.py
log_analyzer/tests/: .gitignore  __init__.py  test_config.py  test_log_find.py  test_log_parser.py  test_log_path.py  test_log_report.py  test_log_report_html.py  test_log_report_template.py  test_log_report_title.py
log_analyzer/tests/snapshots/: snap_test_log_report_template.py
log_analyzer/tests/t_reports/: report-2023.06.23.html  report_data.py
tests/: test_with_pytest.py
