[tool.poetry]
name = "pp-hw-01"
version = "0.1.0"
description = "otus python professional homework_01"
authors = ["valed-dm <dmvaled@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "deco" },
    { include = "log_analyzer" }
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pylint = "^2.17.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
